[FIX] test flake8

--- a/l10n_ve_dpt/views/res_partner.xml
+++ b/l10n_ve_dpt/views/res_partner.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" ?>
 <odoo>
     <data>
         <record id="res_partner_view_municipality_parish" model="ir.ui.view">
@@ -7,8 +7,18 @@
             <field name="inherit_id" ref="base.view_partner_form" />
             <field name="arch" type="xml">
                 <field name="country_id" position="before">
-                    <field name="municipality_id" placeholder="Municipality" options='{"no_open": True}' domain="[('state_id','=',state_id)]"/>
-                    <field name="parish_id" placeholder="Parish" options='{"no_open": True}' domain="[('municipality_id','=',municipality_id)]"/>
+                    <field
+                    name="municipality_id"
+                    placeholder="Municipality"
+                    options='{"no_open": True}' 
+                    domain="[('state_id','=',state_id)]"
+                    />
+                    <field
+                    name="parish_id"
+                    placeholder="Parish"
+                    options='{"no_open": True}'
+                    domain="[('municipality_id','=',municipality_id)]"
+                    />
                 </field>  
             </field>
         </record>
