--- a/l10n_ve_dpt/views/l10n_ve_dpt_view.xml
+++ b/l10n_ve_dpt/views/l10n_ve_dpt_view.xml
@@ -1,13 +1,16 @@
-<?xml version="1.0"?>
+<?xml version="1.0" ?>
 <odoo>
         <record id="view_state_filter" model="ir.ui.view">
             <field name="name">res.country.state.filter</field>
             <field name="model">res.country.state</field>
             <field name="arch" type="xml">
             <search>
-                <field name="ubigeo"/>
-                <field name="name"/>
-                <filter name="Venezuela" domain="[('country_id.name','=','Venezuela')]"/>
+                <field name="ubigeo" />
+                <field name="name" />
+                <filter 
+                name="Venezuela" 
+                domain="[('country_id.name','=','Venezuela')]"
+                />
             </search>
             </field>
         </record>
@@ -15,10 +18,10 @@
         <record id="res_country_state_form_inherited" model="ir.ui.view">
             <field name="name">res.country.state.form.inh</field>
             <field name="model">res.country.state</field>
-            <field name="inherit_id" ref="base.view_country_state_form"/>
+            <field name="inherit_id" ref="base.view_country_state_form" />
             <field name="arch" type="xml">
                 <xpath expr="//group[1]" position='inside'>
-                    <field name='ubigeo'/>
+                    <field name='ubigeo' />
                 </xpath>
             </field>
         </record>
@@ -26,7 +29,7 @@
         <record id="res_country_state_tree_inherited" model="ir.ui.view">
             <field name="name">res.country.state.tree.inh</field>
             <field name="model">res.country.state</field>
-            <field name="inherit_id" ref="base.view_country_state_tree"/>
+            <field name="inherit_id" ref="base.view_country_state_tree" />
             <field name="arch" type="xml">
                 <xpath expr="//tree[1]" position='inside'>
                     <field name='ubigeo'/>
@@ -49,9 +52,9 @@
             <field name="arch" type="xml">
                 <form string="Municipality">
                 <group col="4" colspan="2">
-                    <field name="ubigeo"/>
-                    <field name="name" select="2"/>
-                    <field name="parish_id" select="3"/>
+                    <field name="ubigeo" />
+                    <field name="name" select="2" />
+                    <field name="parish_id" select="3" />
                 </group>
                 </form>
             </field>
@@ -63,9 +66,9 @@
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <tree string="Municipality">
-                    <field name="ubigeo"/>
-                    <field name="name"/>
-                    <field name="state_id"/>
+                    <field name="ubigeo" />
+                    <field name="name" />
+                    <field name="state_id" />
                 </tree>
             </field>
         </record>
@@ -79,46 +82,71 @@
 
 
         <record id="view_parish_form" model="ir.ui.view">
-            <field name="name">res.country.state.municipality.parish.form</field>
+            <field 
+            name="name"
+            >res.country.state.municipality.parish.form</field>
             <field name="model">res.country.state.municipality.parish</field>
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <form string="Parish">
                 <group col="4" colspan="2">
-                    <field name="ubigeo"/>
-                    <field name="name" select="2"/>
-                    <field name="municipality_id" select="0"/>
+                    <field name="ubigeo" />
+                    <field name="name" select="2" />
+                    <field name="municipality_id" select="0" />
                 </group>
                 </form>
             </field>
         </record>
 
         <record id="view_parish_tree" model="ir.ui.view">
-            <field name="name">res.country.state.municipality.parish.tree</field>
+            <field 
+            name="name"
+            >res.country.state.municipality.parish.tree</field>
             <field name="model">res.country.state.municipality.parish</field>
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <tree string="Parish">
-                    <field name="ubigeo"/>
-                    <field name="name"/>
-                    <field name="municipality_id"/>
+                    <field name="ubigeo" />
+                    <field name="name" />
+                    <field name="municipality_id" />
                 </tree>
             </field>
         </record>
 
         <record id="action_parish" model="ir.actions.act_window">
             <field name="name">Parish</field>
-            <field name="res_model">res.country.state.municipality.parish</field>
+            <field 
+            name="res_model"
+            >res.country.state.municipality.parish</field>
             <field name="type">ir.actions.act_window</field>
             <field name="view_mode">tree,form</field>
         </record>
 
         <!-- Submenu for Venezuela Political Territorial Division -->
-        <menuitem id="main_menu_l10n_ve_ptd" name="PTD Venezuela"  parent="base.menu_administration"/>
+        <menuitem 
+        id="main_menu_l10n_ve_ptd"
+        name="PTD Venezuela"
+        parent="base.menu_administration"
+        />
         <!-- Entrada de menu para el modelo de res.country.state -->
-        <menuitem id="item_states" name="States" parent="main_menu_l10n_ve_ptd" action="action_state"/>
+        <menuitem
+        id="item_states"
+        name="States"
+        parent="main_menu_l10n_ve_ptd"
+        action="action_state"
+        />
         <!-- Entrada de menu para el modelo de res.country.state.municipality -->
-        <menuitem id="item_municipalities" name="Municipalities" parent="main_menu_l10n_ve_ptd" action="action_municipality"/>
+        <menuitem
+        id="item_municipalities"
+        name="Municipalities"
+        parent="main_menu_l10n_ve_ptd"
+        action="action_municipality"
+        />
         <!-- Entrada de menu para el modelo de res.country.state.municipality.parish -->
-        <menuitem id="item_parishes" name="Parishes" parent="main_menu_l10n_ve_ptd" action="action_parish"/>
+        <menuitem
+        id="item_parishes"
+        name="Parishes"
+        parent="main_menu_l10n_ve_ptd"
+        action="action_parish"
+        />
 </odoo>
