--- a/l10n_ve_dpt/views/l10n_ve_dpt_views.xml
+++ b/l10n_ve_dpt/views/l10n_ve_dpt_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <record id="view_state_filter" model="ir.ui.view">
         <field name="name">res.country.state.filter</field>
@@ -7,14 +7,13 @@
         <search>
             <field name="ubigeo" />
             <field name="name" />
-            <filter 
-        name="Venezuela"
-        domain="[('country_id.name','=','Venezuela')]"
+            <filter
+                name="Venezuela"
+                domain="[('country_id.name','=','Venezuela')]"
     />
         </search>
         </field>
     </record>
-
     <record id="res_country_state_form_inherited" model="ir.ui.view">
         <field name="name">res.country.state.form.inh</field>
         <field name="model">res.country.state</field>
@@ -25,7 +24,6 @@
             </xpath>
         </field>
     </record>
-
     <record id="res_country_state_tree_inherited" model="ir.ui.view">
         <field name="name">res.country.state.tree.inh</field>
         <field name="model">res.country.state</field>
@@ -36,7 +34,6 @@
             </xpath>
         </field>
     </record>
-
     <record id="action_state" model="ir.actions.act_window">
         <field name="name">State</field>
         <field name="res_model">res.country.state</field>
@@ -44,22 +41,20 @@
         <field name="view_mode">tree,form</field>
         <field name="context">{"search_default_Venezuela":1}</field>
     </record>
-
     <record id="view_municipality_form" model="ir.ui.view">
         <field name="name">res.country.state.municipality.form</field>
         <field name="model">res.country.state.municipality</field>
         <field name="type">form</field>
         <field name="arch" type="xml">
             <form string="Municipality">
-            <group col="4" colspan="2">
-                <field name="ubigeo" />
-                <field name="name" select="2" />
-                <field name="parish_id" select="3" />
-            </group>
+                <group col="4" colspan="2">
+                    <field name="ubigeo" />
+                    <field name="name" select="2" />
+                    <field name="parish_id" select="3" />
+                </group>
             </form>
         </field>
     </record>
-
     <record id="view_municipality_tree" model="ir.ui.view">
         <field name="name">res.country.state.municipality.tree</field>
         <field name="model">res.country.state.municipality</field>
@@ -72,35 +67,28 @@
             </tree>
         </field>
     </record>
-
     <record id="action_municipality" model="ir.actions.act_window">
         <field name="name">Municipality</field>
         <field name="res_model">res.country.state.municipality</field>
         <field name="type">ir.actions.act_window</field>
         <field name="view_mode">tree,form</field>
     </record>
-
     <record id="view_parish_form" model="ir.ui.view">
-        <field 
-        name="name"
-    >res.country.state.municipality.parish.form</field>
+        <field name="name">res.country.state.municipality.parish.form</field>
         <field name="model">res.country.state.municipality.parish</field>
         <field name="type">form</field>
         <field name="arch" type="xml">
             <form string="Parish">
-            <group col="4" colspan="2">
-                <field name="ubigeo" />
-                <field name="name" select="2" />
-                <field name="municipality_id" select="0" />
-            </group>
+                <group col="4" colspan="2">
+                    <field name="ubigeo" />
+                    <field name="name" select="2" />
+                    <field name="municipality_id" select="0" />
+                </group>
             </form>
         </field>
     </record>
-
     <record id="view_parish_tree" model="ir.ui.view">
-        <field
-    name="name"
-    >res.country.state.municipality.parish.tree</field>
+        <field name="name">res.country.state.municipality.parish.tree</field>
         <field name="model">res.country.state.municipality.parish</field>
         <field name="type">tree</field>
         <field name="arch" type="xml">
@@ -111,41 +99,39 @@
             </tree>
         </field>
     </record>
-
     <record id="action_parish" model="ir.actions.act_window">
         <field name="name">Parish</field>
-        <field 
+        <field
         name="res_model"
         >res.country.state.municipality.parish</field>
         <field name="type">ir.actions.act_window</field>
         <field name="view_mode">tree,form</field>
     </record>
-    
     <!-- Submenu for Venezuela Political Territorial Division -->
-    <menuitem 
-    id="main_menu_l10n_ve_ptd"
-    name="PTD Venezuela"
-    parent="base.menu_administration"
-  />
+    <menuitem
+        id="main_menu_l10n_ve_ptd"
+        name="PTD Venezuela"
+        parent="base.menu_administration"
+    />
     <!-- Entrada de menu para el modelo de res.country.state -->
     <menuitem
-    id="item_states"
-    name="States"
-    parent="main_menu_l10n_ve_ptd"
-    action="action_state"
-  />
+        id="item_states"
+        name="States"
+        parent="main_menu_l10n_ve_ptd"
+        action="action_state"
+    />
     <!-- Entrada de menu para el modelo de res.country.state.municipality -->
     <menuitem
-    id="item_municipalities"
-    name="Municipalities"
-    parent="main_menu_l10n_ve_ptd"
-    action="action_municipality"
-  />
+        id="item_municipalities"
+        name="Municipalities"
+        parent="main_menu_l10n_ve_ptd"
+        action="action_municipality"
+    />
     <!-- Entrada de menu para el modelo de res.country.state.municipality.parish -->
     <menuitem
-    id="item_parishes"
-    name="Parishes"
-    parent="main_menu_l10n_ve_ptd"
-    action="action_parish"
-  />
+        id="item_parishes"
+        name="Parishes"
+        parent="main_menu_l10n_ve_ptd"
+        action="action_parish"
+    />
 </odoo>
